# pbi-semantic-doc

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: generate-docs.yml
docs/: presentation-EN.html  presentation-IT.html
examples/sample_model/: DOC_Artificial_Intelligence_Sample.html  DOC_Artificial_Intelligence_Sample.md
examples/sample_model/Artificial Intelligence Sample.Report/: .platform
examples/sample_model/Artificial Intelligence Sample.SemanticModel/: .platform
examples/sample_model/Artificial Intelligence Sample.SemanticModel/.pbi/: cache.abf
examples/sample_model/Artificial Intelligence Sample.SemanticModel/definition/: model.tmdl
pbi_semantic_doc/: __init__.py  cli.py  dax_analyzer.py  generator.py  html_generator.py  json_generator.py  lineage.py  parser.py  report_generator.py  report_models.py  report_parser.py
report/: tgi.pbip
report/tgi.Report/: .platform  definition.pbir
report/tgi.Report/.pbi/: localSettings.json
report/tgi.Report/definition/: report.json
report/tgi.Report/definition/pages/: pages.json
report/tgi.SemanticModel/: .platform  diagramLayout.json
report/tgi.SemanticModel/.pbi/: localSettings.json  unappliedChanges.json
report/tgi.SemanticModel/definition/: model.tmdl  relationships.tmdl
report/tgi.SemanticModel/definition/tables/: Table Décisionnelle INSEE.tmdl  dvf2023.tmdl  resultats-vente-2006-2023.tmdl  tribunaux-judiciaires.tmdl
tests/: test_dax_analyzer.py  test_html_generator.py  test_integration.py  test_lineage.py  test_parser.py  test_report.py
tests/fixtures/legacy_report/definition/: report.json
tests/fixtures/pbir_report/definition/: reportExtensions.json
(+31 files in other folders)
